# rust-cpp-vst-template

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.rs  compile_flags.txt
.github/workflows/: build.yml
resources/installer/: installer_base.nsi
src/: DistrhoPluginInfo.h  common.rs  lib.rs  plugin.cpp  plugin.hpp  plugin.rs  rust.generated.hpp  rust_bridge.cpp  rust_bridge.generated.cpp  rust_bridge.generated.hpp  ui.cpp  ui.rs
xtask/: Cargo.toml
xtask/src/: main.rs
