[package]
name = "my-plugin"
version = "255.255.255"
edition = "2021"

[workspace]
members = ["xtask"]

[features]
static_link_windows = []

[dependencies]
anyhow = "1.0.89"
base64 = "0.22.1"
bincode = "1.3.3"
mime_guess = "2.0.5"
raw-window-handle = "0.6.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = [
  "io-util",
  "rt",
  "rt-multi-thread",
  "fs",
  "macros",
  "sync",
] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"

[lib]
crate-type = ["staticlib"]

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.1"

[dev-dependencies]
rstest = "0.23.0"
