[package]
name = "my-plugin-impl"
version = "255.255.255"
edition = "2021"

[workspace]
members = ["xtask"]

[features]
static_link = []

[dependencies]
anyhow = "1.0.89"
base64 = "0.22.1"
bincode = "1.3.3"
mime_guess = "2.0.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = [
  "io-util",
  "rt",
  "rt-multi-thread",
  "fs",
  "macros",
  "sync",
] }
egui = "0.29"
egui-baseview = { git = "https://github.com/BillyDM/egui-baseview", rev = "4e81e0a" }
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "579130ecb4f9f315ae52190af42f0ea46aeaa4a2" }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
raw-window-handle = "0.5"

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.1"

[dev-dependencies]
rstest = "0.23.0"
