[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo_toml = "0.20.5"
cbindgen = "0.27.0"
clap = { version = "4.5.19", features = ["derive"] }
colored = "2.1.0"
duct = "0.13.7"
notify = "7.0.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
